fix: update swagger tags
